--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lesson1">
+        android:theme="@style/Theme.Calculator">
 
         <activity android:name="ru.geekbrains.calculator.MainActivity">
             <intent-filter>
